update PROTOTYPE URL to J

--- a/views/J/01-overview.html
+++ b/views/J/01-overview.html
@@ -1,4 +1,10 @@
-{% set title = 'Overview - Register your preference for sharing health data' %} {% set content_title = "Overview" %} {% set PROTOTYPE_URL = 'H' %} {% block scripts %} {% endblock %} {% extends 'layouts/layout.html' %} {% block body %}
+{% set title = 'Overview - Register your preference for sharing health data' %}
+{% set content_title = "Overview" %}
+{% set PROTOTYPE_URL = 'J' %}
+{% block scripts %}
+{% endblock %}
+{% extends 'layouts/layout.html' %}
+{% block body %}
 <main id="content" role="main">
   <div class="page-band">
     <div class="page-section">
