--- a/views/J/06-register-your-preference.html
+++ b/views/J/06-register-your-preference.html
@@ -1,5 +1,5 @@
 {% set title = 'Register your preference - Register your preference for sharing health data' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% set content_title = "Register your preference" %}
 {% block scripts %}
 {% endblock %}
