--- a/views/J/app/02-your-details.html
+++ b/views/J/app/02-your-details.html
@@ -1,5 +1,5 @@
 {% set title = 'Your details' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 <script src="/javascripts/radio-checkbox.js"></script>
 <script src="/javascripts/{{PROTOTYPE_URL}}/02-your-details.js"></script>
