--- a/views/J/app/03-verification-option.html
+++ b/views/J/app/03-verification-option.html
@@ -1,5 +1,5 @@
 {% set title = 'Verification option' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 <script src="/javascripts/{{PROTOTYPE_URL}}/03-verification-option.js"></script>
 {% endblock %}
