--- a/views/J/app/04-enter-your-code.html
+++ b/views/J/app/04-enter-your-code.html
@@ -1,5 +1,5 @@
 {% set title = 'Enter your code' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 <script src="/javascripts/{{PROTOTYPE_URL}}/04-enter-your-code.js"></script>
 {% endblock %}
