--- a/views/J/app/07-thank-you.html
+++ b/views/J/app/07-thank-you.html
@@ -1,5 +1,5 @@
 {% set title = 'Thank you' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 <script src="/javascripts/{{PROTOTYPE_URL}}/07-thank-you.js"></script>
 {% endblock %}
