--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -1,5 +1,5 @@
 {% set title = 'Register your preference for sharing patient health data' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 <script src="/javascripts/details.polyfill-1.0.0.min.js"></script>
 {% endblock %}
