--- a/views/J/index.html
+++ b/views/J/index.html
@@ -1,5 +1,5 @@
-{% set title = 'Prototype H' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set title = 'Prototype J' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% extends 'layouts/layout.html' %}
 
 {% block body %}
