--- a/views/J/04-benefits-of-data-sharing.html
+++ b/views/J/04-benefits-of-data-sharing.html
@@ -1,5 +1,5 @@
 {% set title = 'Benefits of data sharing - Register your preference for sharing health data' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% set content_title = "Benefits of data sharing" %}
 {% block scripts %}
 {% endblock %}
