--- a/views/J/app/01-confirm-who-you-are-v3.html
+++ b/views/J/app/01-confirm-who-you-are-v3.html
@@ -1,5 +1,5 @@
 {% set title = 'Confirm who you are' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 <script src="/javascripts/radio-checkbox.js"></script>
 <script src="/javascripts/{{PROTOTYPE_URL}}/01-confirm-who-you-are.js"></script>
