--- a/views/J/app/02X-verification-fail.html
+++ b/views/J/app/02X-verification-fail.html
@@ -1,5 +1,5 @@
 {% set title = 'Verification failure' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 {% endblock %}
 {% extends 'layouts/layout.html' %}
