--- a/views/J/app/03X-contact-us.html
+++ b/views/J/app/03X-contact-us.html
@@ -1,5 +1,5 @@
 {% set title = 'Contact us' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 {% endblock %}
 {% extends 'layouts/layout.html' %}
