--- a/views/J/app/06-confirm-your-choice.html
+++ b/views/J/app/06-confirm-your-choice.html
@@ -1,5 +1,5 @@
 {% set title = 'Review your preference' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 <script src="/javascripts/{{PROTOTYPE_URL}}/06-confirm-your-choice.js"></script>
 {% endblock %}
