--- a/views/J/app/08-survey.html
+++ b/views/J/app/08-survey.html
@@ -1,5 +1,5 @@
 {% set title = 'Survey' %}
-{% set PROTOTYPE_URL = 'H' %}
+{% set PROTOTYPE_URL = 'J' %}
 {% block scripts %}
 <script src="/javascripts/{{PROTOTYPE_URL}}/08-survey.js"></script>
 {% endblock %}
