update index page

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <div class="local-header">
       <h1 class="local-header__title">{{title}}</h1>
       <div class="local-header__intro">
-        <p>Homepage for H series {{title}} prototypes.</p>
+        <p>Homepage for J series {{title}} prototypes.</p>
       </div>
     </div>
 
@@ -19,22 +19,22 @@
         <div class="callout callout--attention">
           <h2>Stable</h2>
           <h3>
-            <a title="Prototype H Summary Page - {{ title }}" href="/H/index">Prototype H</a>
+            <a title="Prototype J Summary Page - {{ title }}" href="/J/index">Prototype H</a>
           </h3>
           <p>
-            Landing page for Prototype H series
+            Landing page for Prototype J series
           </p>
-          <p><a title="Start Prototype H - {{ title }}" role="button" class="button" href="/H/01-overview">Start Prototype H</a></p>
+          <p><a title="Start Prototype J - {{ title }}" role="button" class="button" href="/J/01-overview">Start Prototype J</a></p>
         </div>
 
         <div class="callout">
           <h3>
-            <a title="Prototype H Summary Page - {{ title }}" href="/H/index">Prototype H</a>
+            <a title="Prototype J Summary Page - {{ title }}" href="/J/index">Prototype J</a>
           </h3>
           <p>
-            Landing page for Prototype H series
+            Landing page for Prototype J series
           </p>
-          <p><a title="Start Prototype H - {{ title }}" role="button" class="button" href="/H/01-overview">Start Prototype H</a></p>
+          <p><a title="Start Prototype J - {{ title }}" role="button" class="button" href="/J/01-overview">Start Prototype J</a></p>
         </div>
         <div class="callout">
           <h3>
@@ -79,7 +79,7 @@
           <h2 class="h3">Recent prototypes</h2>
           <ul class="link-list">
             <li>
-              <a href="https://ndop-g.herokuapp.com/">Prototype G</a>
+              <a href="https://ndop-h.herokuapp.com/">Prototype H</a>
             </li>
           </ul>
         </div>
