update index.html to remove mention of H

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
         <div class="callout callout--attention">
           <h2>Stable</h2>
           <h3>
-            <a title="Prototype J Summary Page - {{ title }}" href="/J/index">Prototype H</a>
+            <a title="Prototype J Summary Page - {{ title }}" href="/J/index">Prototype J</a>
           </h3>
           <p>
             Landing page for Prototype J series
