--- a/views/J/04-benefits-of-data-sharing.html
+++ b/views/J/04-benefits-of-data-sharing.html
@@ -50,21 +50,21 @@
             <div class="column--two-thirds">
               <h2>Research</h2>
               <div class="grid-row">
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/prevent_serious_illness.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Prevent serious illness</h3>
                   </div>
                 </div>
 
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/develop_new_treatments.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Develop new treatments</h3>
                   </div>
                 </div>
 
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/make_quicker_diagnoses.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Make quicker diagnoses</h3>
@@ -76,26 +76,26 @@
                 Your patient health information provides numerous benefits. It is used in research to find cures and better treatments for diseases like diabetes and cancer.
               </p>
               <p>
-                Without this data research, the NHS are unable to develop or improve health and care services for the future.
+                Without this data, the NHS are unable to develop or improve health and care services for the future.
               </p>
 
               <h2>Planning</h2>
               <div class="grid-row">
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/plan_nhs_services.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Plan NHS health services</h3>
                   </div>
                 </div>
 
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/reduce_length_of_stay.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Reduce length of stay</h3>
                   </div>
                 </div>
 
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/improve_individual_care.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Improve individual care</h3>
@@ -108,21 +108,21 @@
 
               <h2>Knowledge</h2>
               <div class="grid-row">
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/learn_more_about_diseases.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Learn more about diseases</h3>
                   </div>
                 </div>
 
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/evaluate_nhs_policy.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Evaluate NHS policy</h3>
                   </div>
                 </div>
 
-                <div class="column--one-third">
+                <div class="column--icons">
                   <div>
                     <img src="/images/improve_patient_safety.svg" height="70" width="auto" alt="">
                     <h3 class="h4">Improve patient safety</h3>
