--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -22,39 +22,131 @@
                 Use this service to manage your preferences for sharing your patient health information.
               </p>
               <p>
-                You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
+              If you opt-out of sharing your personally identifiable data, details like your name and address will no longer appear in data shared by the NHS. This will only happen if opt-outs apply to the data set being shared.
+            </p>
+            <h2>How the service works</h2>
+            </div>
+          </div>
+      </div>
+  </div>
+
+  <div class="step-container blue">
+    <div class="page-section">
+      <div class="grid-row">
+        <div class="column--four-fifths">
+          <div class="reading-width">
+            <div id="step-enter-your-details" class="step">
+              <div class="grid-row">
+                <div class="column--step-counter offset">
+                  <div>
+                    1
+                  </div>
+                </div>
+                <div class="column--step-body-with-icon">
+                  <h3>Check your details</h3>
+                  <p>
+                    Tell us your name, date of birth, postcode and NHS number. We will use these details to find your contact information in our patient database.
+                  </p>
+                  <p>
+                    The information you provide will not be saved.
+                  </p>
+
+                </div>
+                <div class="column--step-icon">
+                  <img class="marketing-icon" alt="check your details icon" src="/images/verify-icon.png">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="step-container">
+    <div class="page-section">
+      <div class="grid-row">
+        <div class="column--four-fifths">
+          <div class="reading-width">
+            <div id="step-choose-your-contact-method" class="step">
+              <div class="grid-row">
+                <div class="column--step-counter offset">
+                  <div>
+                    2
+                  </div>
+                </div>
+                <div class="column--step-body-with-icon">
+                  <h3>Confirm your identity</h3>
+                  <p>
+                    Using the details we hold in our database, we will send you a one-time verification code to your selected contact method.
+                  </p>
+                  <p>
+                    When your code is verified, you will be able to set your preference online.
+                  </p>
+                </div>
+                <div class="column--step-icon">
+                  <img class="marketing-icon" alt="check your details icon" src="/images/verification-method-icon.png">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="step-container blue">
+    <div class="page-section">
+      <div class="grid-row">
+        <div class="column--four-fifths">
+          <div class="reading-width">
+            <div id="step-enter-your-security-code" class="step">
+              <div class="grid-row">
+                <div class="column--step-counter offset">
+                  <div>
+                    3
+                  </div>
+                </div>
+                <div class="column--step-body-with-icon">
+                  <h3>Set your preference</h3>
+                  <p>
+                    You will then be able to set an opt-out preference. Once an opt-out request is received, it can take up to 21 days before it can be applied to future data releases.
+                  </p>
+                  <p>
+                    The decision you make will not affect your individual care.
+                  </p>
+
+                </div>
+                <div class="column--step-icon">
+                  <img class="marketing-icon" alt="check your details icon" src="/images/choice-icon.png">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="page-section" id="before-you-start-section">
+      <div class="reading-width">
+          <div class="grid-row">
+            <div class="column--three-quarters">
+              <h2>Before you start</h2>
+              <p>
+                You must have an email address or phone number registered with an NHS service to continue online. <a href="/H/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
               </p>
-              <h2 class="h3">Before you start</h2>
               <p>To continue you will need:</p>
               <ul>
                 <li>access to your email or mobile phone</li>
                 <li>your NHS number</li>
               </ul>
 
-              <details class="" role="group">
-                <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-                  <span class="details__summary">Where can I find my NHS number?</span>
-                </summary>
-                <div class="details__content" id="details-content-0" aria-hidden="true">
-                  <div class="reading-width">
-                    <p>You can find your NHS number on any document sent to you by the NHS. This may include:</p>
-                    <ul>
-                      <li>prescriptions</li>
-                      <li>test results</li>
-                      <li>hospital referral letters</li>
-                      <li>appointment letters</li>
-                      <li>your NHS medical card</li>
-                    </ul>
-                    <p>Ask your GP for help if you can't find your NHS number</p>
-                  </div>
-                </div>
-              </details>
-
-              <p><a role="button" class="button" title="Continue Opt-out Process" href="/{{PROTOTYPE_URL}}/app/01-confirm-who-you-are">Start</a></p>
+              <p><a role="button" class="button" title="Continue Opt-out Process" href="/{{PROTOTYPE_URL}}/app/01-confirm-who-you-are">Start</a> <a href="/{{PROTOTYPE_URL}}/app/00-finding-your-nhs-number" class="button--link">I need help finding my NHS number</a></p>
             </div>
           </div>
+        </div>
       </div>
-  </div>
 
   <div class="page-section">
     <div class="reading-width">
