Split J starting pages into sections

--- a/views/J/app/index-v1.html
+++ b/views/J/app/index-v1.html
@@ -142,31 +142,7 @@
                 <li>your NHS number</li>
               </ul>
 
-              <details class="" role="group">
-                <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-                  <span class="details__summary">Where can I find my NHS number?</span>
-                </summary>
-                <div class="details__content" id="details-content-0" aria-hidden="true">
-                  <div class="reading-width">
-                    <p>
-                      Everyone registered with the NHS has a unique patient identifier called an NHS Number.
-                    </p>
-                    <p>
-                      An NHS number is a 10 digit number, like 485 777 3456.
-                    </p>
-                    <p>You can find your NHS number on any document sent to you by the NHS. This may include:</p>
-                    <ul>
-                      <li>prescriptions</li>
-                      <li>test results</li>
-                      <li>hospital referral letters</li>
-                      <li>appointment letters</li>
-                      <li>your NHS medical card</li>
-                    </ul>
-                  </div>
-                </div>
-              </details>
-
-              <p><a role="button" class="button" title="Continue Opt-out Process" href="/{{PROTOTYPE_URL}}/app/01-confirm-who-you-are">Start</a></p>
+              <p><a role="button" class="button" title="Continue Opt-out Process" href="/{{PROTOTYPE_URL}}/app/01-confirm-who-you-are">Start</a> <a href="/{{PROTOTYPE_URL}}/app/00-finding-your-nhs-number" class="button--link">I need help finding my NHS number</a></p>
             </div>
           </div>
         </div>
