--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -134,7 +134,7 @@
             <div class="column--three-quarters">
               <h2>Before you start</h2>
               <p>
-                You must have an email address or phone number registered with an NHS service to continue online. <a href="/H/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
+                You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
               </p>
               <p>To continue you will need:</p>
               <ul>
