add new service start page to landing page

--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -132,41 +132,16 @@
       <div class="reading-width">
           <div class="grid-row">
             <div class="column--three-quarters">
-              <h2>Before you start</h2>
+              <h2></h2>
               <p>
-                You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
+                For security reasons we must verify who you are before you can set your preferences.
               </p>
-              <p>To continue you will need:</p>
-              <ul>
-                <li>access to your email or mobile phone</li>
-                <li>your NHS number</li>
-              </ul>
-
-              <details class="" role="group">
-                <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-                  <span class="details__summary">Where can I find my NHS number?</span>
-                </summary>
-                <div class="details__content" id="details-content-0" aria-hidden="true">
-                  <div class="reading-width">
-                    <p>
-                      Everyone registered with the NHS has a unique patient identifier called an NHS Number.
-                    </p>
-                    <p>
-                      An NHS number is a 10 digit number, like 485 777 3456.
-                    </p>
-                    <p>You can find your NHS number on any document sent to you by the NHS. This may include:</p>
-                    <ul>
-                      <li>prescriptions</li>
-                      <li>test results</li>
-                      <li>hospital referral letters</li>
-                      <li>appointment letters</li>
-                      <li>your NHS medical card</li>
-                    </ul>
-                  </div>
-                </div>
-              </details>
-
-              <p><a role="button" class="button" title="Continue Opt-out Process" href="/{{PROTOTYPE_URL}}/app/01-confirm-who-you-are">Start</a></p>
+              <p>
+                By continuing you agree to let us search for your details in our database to send you a one-time security passcode.
+              </p>
+              <p>
+                <a href="/{{PROTOTYPE_URL}}/app/02-your-details" class="button" role="button">Agree and continue</a>
+              </p>
             </div>
           </div>
         </div>
