--- a/views/J/06-register-your-preference.html
+++ b/views/J/06-register-your-preference.html
@@ -57,6 +57,39 @@
           <p>
             Your decision will not affect your own individual care in any way. You can also change your mind and set a different preference in the future, if you wish to do so.
           </p>
+          <h2>Before you start</h2>
+          <p>
+            You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
+          </p>
+          <p>To continue you will need:</p>
+          <ul>
+            <li>access to your email or mobile phone</li>
+            <li>your NHS number</li>
+          </ul>
+
+          <details class="" role="group">
+            <summary role="button" aria-controls="details-content-0" aria-expanded="false">
+              <span class="details__summary">Where can I find my NHS number?</span>
+            </summary>
+            <div class="details__content" id="details-content-0" aria-hidden="true">
+              <div class="reading-width">
+                <p>
+                  Everyone registered with the NHS has a unique patient identifier called an NHS Number.
+                </p>
+                <p>
+                  An NHS number is a 10 digit number, like 485 777 3456.
+                </p>
+                <p>You can find your NHS number on any document sent to you by the NHS. This may include:</p>
+                <ul>
+                  <li>prescriptions</li>
+                  <li>test results</li>
+                  <li>hospital referral letters</li>
+                  <li>appointment letters</li>
+                  <li>your NHS medical card</li>
+                </ul>
+              </div>
+            </div>
+          </details>
           <a role="button" class="button" title="Start Opt-out Process" href="/{{PROTOTYPE_URL}}/app/index">Register your preference</a>
         </div>
       </div>
