tweak journey of J to fold in reality of thunderbid going live on NHSUK

--- a/views/J/06-register-your-preference.html
+++ b/views/J/06-register-your-preference.html
@@ -57,7 +57,7 @@
           <p>
             Your decision will not affect your own individual care in any way. You can also change your mind and set a different preference in the future, if you wish to do so.
           </p>
-          <h2>Before you start</h2>
+          <h2 class="h3">Before you start</h2>
           <p>
             You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
           </p>
