--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -19,11 +19,12 @@
           <div class="grid-row">
             <div class="column--three-quarters">
               <p>
-                Use this service to manage your preferences for sharing your patient health information.
+                For security reasons we must verify who you are before you can set your preferences.
               </p>
               <p>
-              If you opt-out of sharing your personally identifiable data, details like your name and address will no longer appear in data shared by the NHS. This will only happen if opt-outs apply to the data set being shared.
-            </p>
+                We will do this by searching for your contact details in our database in order to send you a one-time verification code.
+              </p>
+
             <h2>How the service works</h2>
             </div>
           </div>
@@ -128,14 +129,10 @@
     </div>
   </div>
 
-  <div class="page-section" id="before-you-start-section">
+  <div class="page-section">
       <div class="reading-width">
           <div class="grid-row">
             <div class="column--three-quarters">
-              <h2></h2>
-              <p>
-                For security reasons we must verify who you are before you can set your preferences.
-              </p>
               <p>
                 By continuing you agree to let us search for your details in our database to send you a one-time security passcode.
               </p>
@@ -151,7 +148,7 @@
     <div class="reading-width">
       <div class="grid-row">
         <div class="column--three-quarters">
-          {{ patterns.page_nav( "Overview", "/" + PROTOTYPE_URL + "/01-overview", "", "" ) }}
+          {{ patterns.page_nav( "Overview", "/" + PROTOTYPE_URL + "/06-register-your-preference", "", "" ) }}
         </div>
       </div>
     </div>
