--- a/views/J/01-overview.html
+++ b/views/J/01-overview.html
@@ -94,7 +94,7 @@
             You may use our online service to set or change your preference at any time. If you do not wish to opt out, you don’t have to do anything at all.
           </p>
           <p>
-            <a title="Start Opt-out Process" href="/{{PROTOTYPE_URL}}/app/index">Register your preference now</a> or continue reading for more information.
+            <a title="Start Opt-out Process" href="/{{PROTOTYPE_URL}}/06-register-your-preference">Register your preference</a> or continue reading for more information.
           </p>
         </div>
       </div>
