Make best effort to update J to Ian AP content changes

--- a/views/J/06-register-your-preference.html
+++ b/views/J/06-register-your-preference.html
@@ -59,7 +59,7 @@
           </p>
           <h2 class="h3">Before you start</h2>
           <p>
-            You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preferences instead</a>.
+            You must have an email address or phone number registered with an NHS service to continue online. <a href="/{{PROTOTYPE_URL}}/app/00-other-ways-to-set-your-preferences">Other ways to set your preference</a>.
           </p>
           <p>To continue you will need:</p>
           <ul>
