--- a/views/J/app/01-confirm-who-you-are-v3.html
+++ b/views/J/app/01-confirm-who-you-are-v3.html
@@ -21,7 +21,7 @@
       <div class="grid-row">
         <div class="column--three-quarters">
           <div class="reading-width">
-            <p>For security reasons we must verify who you are before you can set your preferences. To do this you must complete the following three verification steps.</p>
+            <p>For security reasons we must verify who you are before you can set your preferences. To do this you must complete three verification steps.</p>
           </div>
         </div>
       </div>
