--- a/views/J/app/02X-verification-fail.html
+++ b/views/J/app/02X-verification-fail.html
@@ -15,12 +15,12 @@
   <div class="page-section">
       <div class="reading-width">
         <h1 class="page-title">{{title}}</h1>
-        
+
           <div class="grid-row">
             <div class="column--three-quarters">
               <p>Sorry, we were unable to find a unique match for your details.</p>
 
-              <p>If you plan to visit your GP anytime soon, speak to them about your patient information sharing preferences instead. </p>
+              <p>If you plan to visit your GP anytime soon, speak to them about your patient health information preferences instead.</p>
 
             </div>
             </div>
