--- a/views/J/app/01-confirm-who-you-are-v4.html
+++ b/views/J/app/01-confirm-who-you-are-v4.html
@@ -23,7 +23,7 @@
           <div class="reading-width">
             <p>For security reasons we must verify who you are before you can set your preferences.</p>
             <p>
-              To do this you must complete the following three verification steps.
+              To do this you must complete three verification steps.
             </p>
           </div>
         </div>
