--- a/views/J/app/05-make-your-choice.html
+++ b/views/J/app/05-make-your-choice.html
@@ -27,10 +27,10 @@
             </div>
 
             <p>
-              There are two reasons why your personally identifiable data may be used. The first reason for sharing is for your individual care and for your own medical records.
+              There are two reasons why your personally identifiable data may be used. The first reason is for your individual care and for your own medical records.
             </p>
             <p>
-              The second reason for sharing is to help the NHS research, plan and improve health and social care services for you and your family.
+              The second reason for using your data is to help the NHS research, plan and improve health and social care services for you and your family.
             </p>
             <p>
               If you don't agree with using your data for the second reason, you can opt-out of this. Your decision will not affect your individual care and you can change your mind anytime you like.
@@ -38,7 +38,7 @@
 
             <form class="form" action="javascript:confirmAll();">
                 <div id="single-question" class="form-group form-row util-no-margin">
-                  <h2 class="h3">I want to stop sharing my data beyond my individual care</h2>
+                  <h2 class="h3">I want to stop using my data beyond my individual care</h2>
                   <div id="single-question-input-error" class="error error-message">
                     <p class="error-text">Please select your preference</p>
                   </div>
