--- a/views/J/app/07-thank-you.html
+++ b/views/J/app/07-thank-you.html
@@ -19,12 +19,12 @@
 
           <div class="grid-row">
             <div class="column--three-quarters">
-              <p class="alert alert-success" role="alert" style="display:none;" tabindex="-1">Your preferences have been saved.</p>
+              <p class="alert alert-success" role="alert" style="display:none;" tabindex="-1">Your preference has been saved.</p>
               <p>
-                It can take up to 21 days before your decision can be applied to future data releases leaving the NHS. Your preferences will be applied gradually across all organisations that use patient health information.
+                It can take up to 21 days before your decision can be applied to future data releases leaving the NHS. Your preference will be applied gradually across all organisations that use patient health information.
               </p>
               <p>
-                Your preferences will be acknowledged by <a href="/{{PROTOTYPE_URL}}/02-who-uses-your-data">other organisations that use health and social care information by March 2020</a>.
+                Your preference will be acknowledged by <a href="/{{PROTOTYPE_URL}}/02-who-uses-your-data">other organisations that use health and social care information by March 2020</a>.
               </p>
               <p>
                 You can reset your preferences at any time in the future using this service.
