--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -134,7 +134,7 @@
           <div class="grid-row">
             <div class="column--three-quarters">
               <p>
-                By continuing you agree to let us search for your details in our database to send you a one-time security passcode.
+                You agree to let us search for your details in our database, so that we can send you a one-time security passcode.
               </p>
               <p>
                 <a href="/{{PROTOTYPE_URL}}/app/02-your-details" class="button" role="button">Agree and continue</a>
