make copy corrections to index page

--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -19,7 +19,7 @@
           <div class="grid-row">
             <div class="column--three-quarters">
               <p>
-                For security reasons we must verify who you are before you can set your preferences.
+                For security reasons we must verify who you are before you can set your preference.
               </p>
               <p>
                 We will do this by searching for your contact details in our database in order to send you a one-time verification code.
@@ -46,10 +46,10 @@
                 <div class="column--step-body-with-icon">
                   <h3>Check your details</h3>
                   <p>
-                    Tell us your name, date of birth, postcode and NHS number. We will use these details to find your contact information in our patient database.
+                    Tell us your name, date of birth, postcode and NHS number. We can then find your contact information in our patient database.
                   </p>
                   <p>
-                    The information you provide will not be saved.
+                    The details you provide will not be saved.
                   </p>
 
                 </div>
