--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -148,7 +148,7 @@
     <div class="reading-width">
       <div class="grid-row">
         <div class="column--three-quarters">
-          {{ patterns.page_nav( "Overview", "/" + PROTOTYPE_URL + "/06-register-your-preference", "", "" ) }}
+          {{ patterns.page_nav( "Before you start", "/" + PROTOTYPE_URL + "/06-register-your-preference#before-you-start", "", "" ) }}
         </div>
       </div>
     </div>
