Add IDs to h2 tags

--- a/views/J/02-who-uses-your-data.html
+++ b/views/J/02-who-uses-your-data.html
@@ -67,7 +67,7 @@
             </li>
           </ul>
 
-          <h2 class="h3">How your data is used</h2>
+          <h2 id="how-your-data-is-used" class="h3">How your data is used</h2>
           <div class="panel">
             <div class="panel__content panel__content--half">
               <div class="reading-width">
