--- a/views/J/04-benefits-of-data-sharing.html
+++ b/views/J/04-benefits-of-data-sharing.html
@@ -48,7 +48,7 @@
       <div class="reading-width">
           <div class="grid-row">
             <div class="column--two-thirds">
-              <h2>Research</h2>
+              <h2 id="research">Research</h2>
               <div class="grid-row">
                 <div class="column--icons">
                   <div>
