--- a/views/J/05-how-opting-out-works.html
+++ b/views/J/05-how-opting-out-works.html
@@ -53,28 +53,29 @@
                 If you opt-out of sharing your personally identifiable data, details like your name and address will no longer appear in data shared by the NHS.
               </p>
 
-              <h3>The opt-out process</h3>
+              <h2 id="the-opt-out-process">The opt-out process</h2>
 
-              <h4>You set an opt-out preference</h4>
+              <h3>You set an opt-out preference</h3>
               <p>
                 Use our online service to opt-out of using your data beyond your individual care.
               </p>
-              <h4>Your preference is processed</h4>
+
+              <h3>Your preference is processed</h3>
               <p>
                 Our automated IT systems will process this information quickly and securely.
               </p>
 
-              <h4>We make a record of your preference</h4>
+              <h3>We make a record of your preference</h3>
               <p>
                 This specifies the date your opt-out was received or if it has been withdrawn. So we know when we are able to use data and when we must apply an opt-out preference.
               </p>
 
-              <h4>We update our full list of current preferences</h4>
+              <h3>We update our full list of current preferences</h3>
               <p>
                 It can take up to 21 days before your preference can be applied to future data releases.
               </p>
 
-              <h3>Where opt-outs do not apply</h3>
+              <h2 id="where-opt-outs-do-not-apply">Where opt-outs do not apply</h2>
               <p>
                 There are some circumstances where opt-outs do not apply. In these circumstances, your personally identifiable data will still be used.
               </p>
