add h2 IDs to service flow

--- a/views/J/app/00-other-ways-to-set-your-preferences.html
+++ b/views/J/app/00-other-ways-to-set-your-preferences.html
@@ -17,14 +17,14 @@
         <h1 class="page-title">{{title}}</h1>
           <div class="grid-row">
             <div class="column--three-quarters">
-              <p>To set your preferences online, you must be able to verify who you are.</p>
+              <p>To set your preference online, you must be able to verify who you are.</p>
               <p>You can’t do this yourself if you haven’t registered an email or mobile number with your GP practice.</p>
-              <h2 class="h3">Other ways to set your preferences</h2>
+              <h2 id="other-ways-to-set-your-preference" class="h3">Other ways to set your preferences</h2>
               <p>
                 Contact the NHS Digital Contact Centre to verify your identity and discuss your data sharing preferences.
               </p>
               <p>
-                We may be able to guide you through the service, or set preferences on your behalf.
+                We may be able to guide you through the service, or set your preference on your behalf.
               </p>
               <p>
                 Call: 0300 303 5678
@@ -41,7 +41,7 @@
         <div class="reading-width">
           <div class="grid-row">
             <div class="column--three-quarters">
-              {{ patterns.page_nav( "Register your preferences for sharing patient health data", "/" + PROTOTYPE_URL + "/app/index" ) }}
+              {{ patterns.page_nav( "Register your preference", "/" + PROTOTYPE_URL + "/app/index" ) }}
             </div>
           </div>
         </div>
