--- a/views/J/app/01-confirm-who-you-are-v2.html
+++ b/views/J/app/01-confirm-who-you-are-v2.html
@@ -37,7 +37,7 @@
         <div class="column--three-quarters">
           <div class="reading-width">
 
-            <h2>Verification steps</h2>
+            <h2 id="verification-steps">Verification steps</h2>
             <div id="step-enter-your-details" class="step">
               <div class="grid-row">
                 <div class="column--step-counter">
@@ -154,7 +154,7 @@
       <div class="grid-row">
         <div class="column--three-quarters">
           <div class="reading-width">
-            <h2>Start verification process</h2>
+            <h2 id="start-verification-process">Start verification process</h2>
             <p>
               By continuing you agree to let us search for your details in our database to send you a one-time security passcode.
             </p>
