--- a/views/J/app/04X-contact-us.html
+++ b/views/J/app/04X-contact-us.html
@@ -15,14 +15,14 @@
   <div class="page-section">
       <div class="reading-width">
         <h1 class="page-title">{{title}}</h1>
-        
+
           <div class="grid-row">
             <div class="column--three-quarters">
               <p>
                 If you have not received a verification code by email or mobile, contact the NHS Digital Contact Centre.
               </p>
               <p>
-                We may be able to guide you through the service, or set preferences on your behalf.
+                We may be able to guide you through the service, or set your preference on your behalf.
               </p>
               <p>
                 Call: 0300 303 5678
