--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -25,7 +25,7 @@
                 We will do this by searching for your contact details in our database in order to send you a one-time verification code.
               </p>
 
-            <h2>How the service works</h2>
+              <h2 id="how-the-service-works">How the service works</h2>
             </div>
           </div>
       </div>
