--- a/views/J/app/index.html
+++ b/views/J/app/index.html
@@ -82,7 +82,7 @@
                     Using the details we hold in our database, we will send you a one-time verification code to your selected contact method.
                   </p>
                   <p>
-                    When your code is verified, you will be able to set your preference online.
+                    Enter your verification code online to prove your identity.
                   </p>
                 </div>
                 <div class="column--step-icon">
@@ -111,10 +111,10 @@
                 <div class="column--step-body-with-icon">
                   <h3>Set your preference</h3>
                   <p>
-                    You will then be able to set an opt-out preference. Once an opt-out request is received, it can take up to 21 days before it can be applied to future data releases.
+                    You will then be able to set an opt-out preference. The decision you make will not affect your individual care.
                   </p>
                   <p>
-                    The decision you make will not affect your individual care.
+                    You can also change your mind at any time.
                   </p>
 
                 </div>
@@ -134,7 +134,7 @@
           <div class="grid-row">
             <div class="column--three-quarters">
               <p>
-                You agree to let us search for your details in our database, so that we can send you a one-time security passcode.
+                By continuing you agree to let us search for your details in our database to send you a one-time security passcode.
               </p>
               <p>
                 <a href="/{{PROTOTYPE_URL}}/app/02-your-details" class="button" role="button">Agree and continue</a>
