update NHS dropdown to add GP advice

--- a/views/J/06-register-your-preference.html
+++ b/views/J/06-register-your-preference.html
@@ -84,6 +84,9 @@
                   <li>appointment letters</li>
                   <li>your NHS medical card</li>
                 </ul>
+                <p>
+                  Ask your GP for help if you can't find your NHS number
+                </p>
               </div>
             </div>
           </details>
