--- a/public/stylesheets/environment/settings/_fonts.scss
+++ b/public/stylesheets/environment/settings/_fonts.scss
@@ -1,1 +1,24 @@
-@import url("https://assets.nhs.uk/fonts/nhsuk-fonts-1.1.0.css");
+// @import url("https://assets.nhs.uk/fonts/nhsuk-fonts-1.1.0.css");
+//
+
+@font-face {
+  font-family: "Frutiger W01";
+  font-weight: 400;
+  font-style: normal;
+  src: url('/fonts/FrutigerLTW01-55Roman.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/FrutigerLTW01-55Roman.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url("/fonts/FrutigerLTW01-55Roman.woff2") format('woff2'), /* Super Modern Browsers */
+       url('/fonts/FrutigerLTW01-55Roman.woff') format('woff'), /* Pretty Modern Browsers */
+       url('/fonts/FrutigerLTW01-55Roman.ttf')  format('truetype'), /* Safari, Android, iOS */
+}
+
+@font-face {
+  font-family: "Frutiger W01";
+  font-weight: 600;
+  font-style: normal;
+  src: url('/fonts/FrutigerLTW01-65Bold.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/FrutigerLTW01-65Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url("/fonts/FrutigerLTW01-65Bold.woff2") format('woff2'), /* Super Modern Browsers */
+       url('/fonts/FrutigerLTW01-65Bold.woff') format('woff'), /* Pretty Modern Browsers */
+       url('/fonts/FrutigerLTW01-65Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
+}
